fix background-attachment on mobile

--- a/src/less/app.less
+++ b/src/less/app.less
@@ -242,10 +242,6 @@ p {
 }
 .hello .pic.hero {
 	background-image: url('/images/road-bike.jpg');
-	background-image: -webkit-image-set(
-			url('/images/road-bike.jpg') 1x, 
-			url('/images/road-bike.jpg') 2x
-		);
 	background-position:center 72%;
 }
 .agent .pic.hero {
@@ -261,9 +257,8 @@ p {
 	background: gray;
 	// background-image: url('/images/boat.jpg');
 	background-repeat: no-repeat;
-	background-attachment: fixed;
+	// background-attachment: fixed;
 	background-size: cover;
-	background-position:center 72%;
 	position: relative;
 	z-index: 2;
 	font-size: 0em;
